<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.descflower.DescriptionFlowerActivity">

    <ImageView
        android:id="@+id/imgBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_main" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="36dp"
        android:clipToPadding="false"
        android:background="#33000000">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgFlower"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:background="@drawable/bg_description"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/img_flower"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/pbLoad"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginHorizontal="24dp"
                android:indeterminate="true"
                app:indicatorColor="@color/green_pri"
                app:layout_constraintTop_toBottomOf="@id/tvLoad"
                app:trackColor="@color/transparent"
                app:trackCornerRadius="4dp"
                app:trackThickness="12dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="40dp"
                app:layout_constraintBottom_toBottomOf="@id/imgFlower"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:background="@drawable/bg_banner_home"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fabFavorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@color/background"
                        app:fabSize="mini"
                        app:srcCompat="@drawable/ic_favorite"
                        app:tint="@color/green_sec" />

                    <TextView
                        android:id="@+id/tvNameFlower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Rose"
                        android:textColor="@color/background"
                        android:textSize="22dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:background="@color/transparent"
                android:backgroundTint="@color/transparent"
                android:drawableTop="@drawable/ic_back"
                android:drawableTint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat"
                android:paddingHorizontal="12dp"
                android:text="@string/loading_a_detailed_description_of_this_flower"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgFlower" />


            <LinearLayout
                android:id="@+id/lnlInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgFlower">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:drawableStart="@drawable/ic_leaf"
                    android:drawablePadding="24dp"
                    android:drawableTint="@color/background"
                    android:fontFamily="@font/montserrat_medium"
                    android:paddingHorizontal="8dp"
                    android:text="@string/description"
                    android:textColor="@color/background"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:fontFamily="@font/montserrat"
                    android:paddingHorizontal="8dp"
                    android:text="@string/description_flower"
                    android:textColor="@color/background"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:drawableStart="@drawable/ic_flower"
                    android:drawablePadding="24dp"
                    android:drawableTint="@color/background"
                    android:fontFamily="@font/montserrat_medium"
                    android:paddingHorizontal="8dp"
                    android:text="@string/species"
                    android:textColor="@color/background"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvSpecies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:fontFamily="@font/montserrat"
                    android:paddingHorizontal="8dp"
                    android:text="@string/care_flower"
                    android:textColor="@color/background"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:drawableStart="@drawable/ic_care"
                    android:drawablePadding="24dp"
                    android:drawableTint="@color/background"
                    android:fontFamily="@font/montserrat_medium"
                    android:paddingHorizontal="8dp"
                    android:text="@string/care"
                    android:textColor="@color/background"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvCare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:fontFamily="@font/montserrat"
                    android:paddingHorizontal="8dp"
                    android:text="@string/care_flower"
                    android:textColor="@color/background"
                    android:textSize="16dp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>